
// Copyright 2018 gRPC authors.

syntax = "proto3";

package grpc.testing;

service EmptyService {
}
